layout and styling; catalog view: completed external links, completed documentation and completed downloads; catalog view: started with geoservices

--- a/messages.pot
+++ b/messages.pot
@@ -1,40 +1,312 @@
-#: geolotse.py:160 templates/index.html:24
+#: geolotse.py:176
 msgid "Katalog"
 msgstr ""
 
-#: geolotse.py:168 templates/index.html:25
+#: geolotse.py:184 templates/footer.html:6
+msgid "Impressum"
+msgstr ""
+
+#: geolotse.py:192 templates/footer.html:5
+msgid "Datenschutz"
+msgstr ""
+
+#: geolotse.py:200
 msgid "Lebenslagen"
 msgstr ""
 
-#: templates/catalog.html:20
+#: geolotse.py:208 templates/footer.html:8
+msgid "Nutzungsbedingungen"
+msgstr ""
+
+#: templates/catalog.html:25
 msgid "API (Programmierschnittstellen)"
 msgstr ""
 
-#: templates/catalog.html:22
+#: templates/catalog.html:27
 msgid "Anwendungen"
 msgstr ""
 
-#: templates/catalog.html:24
+#: templates/catalog.html:29
 msgid "Dokumentationen"
 msgstr ""
 
-#: templates/catalog.html:26
+#: templates/catalog.html:31
 msgid "Downloads"
 msgstr ""
 
-#: templates/catalog.html:28
+#: templates/catalog.html:33
 msgid "externe Links"
 msgstr ""
 
-#: templates/catalog.html:30
+#: templates/catalog.html:35
 msgid "Geodatendienste"
 msgstr ""
 
-#: templates/catalog.html:32
+#: templates/catalog.html:37
 msgid "Tools"
 msgstr ""
 
-#: templates/catalog.html:43
+#: templates/catalog.html:50 templates/catalog.html:61
+#: templates/catalog.html:76
 msgid "letzte Prüfung auf Erreichbarkeit"
+msgstr ""
+
+#: templates/catalog.html:51 templates/catalog.html:62
+#: templates/catalog.html:77
+msgid "öffentlich zugänglich"
+msgstr ""
+
+#: templates/catalog.html:51 templates/catalog.html:62
+#: templates/catalog.html:77
+msgid "nicht öffentlich zugänglich"
+msgstr ""
+
+#: templates/catalog.html:69
+msgid "Listeninhalte filtern"
+msgstr ""
+
+#: templates/footer.html:4
+msgid "Code"
+msgstr ""
+
+#: templates/footer.html:7 templates/imprint.html:65
+msgid "Kontakt"
+msgstr ""
+
+#: templates/footer.html:11
+msgid "Lizenz"
+msgstr ""
+
+#: templates/imprint.html:7
+msgid "Herausgeberin"
+msgstr ""
+
+#: templates/imprint.html:8 templates/imprint.html:24 templates/imprint.html:40
+msgid "Hanse- und Universitätsstadt Rostock"
+msgstr ""
+
+#: templates/imprint.html:10 templates/imprint.html:26
+msgid "Büro des Oberbürgermeisters"
+msgstr ""
+
+#: templates/imprint.html:12
+msgid "Presse- und Informationsstelle"
+msgstr ""
+
+#: templates/imprint.html:16 templates/imprint.html:34
+#: templates/imprint.html:48
+msgid "Telefon"
+msgstr ""
+
+#: templates/imprint.html:18 templates/imprint.html:36
+#: templates/imprint.html:50
+msgid "Telefax"
+msgstr ""
+
+#: templates/imprint.html:20 templates/imprint.html:38
+#: templates/imprint.html:52
+msgid "E-Mail"
+msgstr ""
+
+#: templates/imprint.html:21
+msgid "Umsatzsteuer-Identifikationsnummer gemäß § 27a Umsatzsteuergesetz"
+msgstr ""
+
+#: templates/imprint.html:23
+msgid "Verantwortung gemäß § 7 Abs. 1 Telemediengesetz"
+msgstr ""
+
+#: templates/imprint.html:30
+msgid "Pressesprecher Presse- und Informationsstelle"
+msgstr ""
+
+#: templates/imprint.html:39
+msgid "Konzept, Betreuung und technische Realisierung"
+msgstr ""
+
+#: templates/imprint.html:42
+msgid "Kataster-, Vermessungs- und Liegenschaftsamt"
+msgstr ""
+
+#: templates/imprint.html:53
+msgid "Haftung für angebotene Inhalte"
+msgstr ""
+
+#: templates/imprint.html:54
+msgid ""
+"Trotz sorgfältigen Recherchen und Prüfungen übernimmt die Hanse- und "
+"Universitätsstadt Rostock für die Richtigkeit, Vollständigkeit und "
+"Aktualität der von ihr angebotenen Inhalte keine Gewähr und keine "
+"Haftung. Insbesondere haftet die Hanse- und Universitätsstadt Rostock "
+"nicht für Schäden, die durch die direkte oder indirekte Nutzung oder "
+"Nichtnutzung der angebotenen Inhalte verursacht werden. Die Hanse- und "
+"Universitätsstadt Rostock behält es sich ferner ausdrücklich vor, "
+"einzelne Inhalte oder das gesamte Angebot ohne gesonderte Ankündigung zu "
+"verändern, zu ergänzen, zu löschen oder die Veröffentlichung zeitweise "
+"oder endgültig einzustellen. Die Hanse- und Universitätsstadt Rostock ist"
+" als Diensteanbieterin gemäß § 7 Abs. 1 Telemediengesetz (TMG) für ihre "
+"eigenen Inhalte, die sie zur Nutzung bereithält, verantwortlich. Gemäß §§"
+" 8 bis 10 TMG ist sie jedoch nicht verpflichtet, von fremden Eigentümern "
+"übermittelte oder gespeicherte Inhalte, die sie zur Nutzung bereithält, "
+"auf etwaige Rechtsverletzungen zu überprüfen. Gleichwohl verpflichtet sie"
+" sich zur umgehenden Entfernung betroffener Inhalte ab dem Zeitpunkt der "
+"Kenntnis einer konkreten Rechtsverletzung."
+msgstr ""
+
+#: templates/imprint.html:55
+msgid "Haftung für externe Links"
+msgstr ""
+
+#: templates/imprint.html:56
+msgid ""
+"Für die von Dritten angebotenen fremden Inhalte, auf die mittels externer"
+" Links verwiesen ist, übernimmt die Hanse- und Universitätsstadt Rostock "
+"keine Gewähr und keine Haftung, da sich diese Inhalte ihrer Einflussnahme"
+" entziehen. Verantwortlich für diese Inhalte ist stets der jeweilige "
+"Anbieter. Alle mittels externer Links verknüpfte fremde Inhalte wurden "
+"zum Zeitpunkt ihrer Verlinkung auf mögliche Rechtsverletzungen überprüft,"
+" mit dem Resultat, dass keine konkreten Rechtsverletzungen erkannt "
+"wurden. Die kontinuierliche Kontrolle der verlinkten Inhalte allerdings "
+"ist ohne Anhaltspunkte für eine konkrete Rechtsverletzung nicht zumutbar."
+" Sollte die Hanse- und Universitätsstadt Rostock hingegen von einer "
+"konkreten Rechtsverletzung Kenntnis erlangen, wird sie die entsprechenden"
+" externen Links umgehend entfernen."
+msgstr ""
+
+#: templates/imprint.html:57
+msgid "Urheberrecht"
+msgstr ""
+
+#: templates/imprint.html:58 templates/terms_of_use.html:8
+msgid ""
+"Die von der Hanse- und Universitätsstadt Rostock angebotenen und in ihrem"
+" Eigentum befindlichen Inhalte unterliegen der gemeinfreien Lizenz"
+msgstr ""
+
+#: templates/imprint.html:58 templates/terms_of_use.html:8
+msgid ""
+"(CC0 1.0). Damit ist alles gestattet, ohne um weitere Erlaubnis bitten zu"
+" müssen."
+msgstr ""
+
+#: templates/imprint.html:59
+msgid "Verweise auf angebotene Inhalte"
+msgstr ""
+
+#: templates/imprint.html:60
+msgid ""
+"Verweise auf die angebotenen Inhalte durch externe Angebote Dritter sind "
+"ausdrücklich erwünscht. Hingegen sind Verweise durch Angebote natürlicher"
+" oder juristischer Personen, die verfassungsfeindliche Ziele verfolgen, "
+"die eine sittenwidrige Tätigkeit ausüben oder die die Vermarktung von "
+"Artikeln mit sittenwidrigem Inhalt betreiben, nicht zulässig."
+msgstr ""
+
+#: templates/imprint.html:61
+msgid "Barrierefreiheit"
+msgstr ""
+
+#: templates/imprint.html:62
+msgid ""
+"Die Hanse- und Universitätsstadt Rostock verpflichtet sich in ihren "
+"Leitlinien zur Stadtentwicklung die zum 26. März 2009 in Deutschland in "
+"Kraft getretene Behindertenrechtskonvention der Vereinten Nationen "
+"schrittweise umzusetzen. In ihren Internetauftritten achtet die Hanse- "
+"und Universitätsstadt Rostock daher auf die Einhaltung der Barrierefreien"
+" Informationstechnik-Verordnung (BITV 2.0). Bei der Erstellung des "
+"vorliegenden Angebotes konnten die Vorgaben der BITV 2.0 hingegen nicht "
+"vollständig umgesetzt werden, da die Grenzen der Barrierefreiheit unter "
+"anderem in der Bedienung interaktiver digitaler Karten liegen. "
+"Vollständig umgesetzt werden konnten jedoch die Richtlinien der Web "
+"Content Accessibility Guidelines 2.0 (WCAG 2.0) in der Stufe AA des World"
+" Wide Web Consortiums (W3C)."
+msgstr ""
+
+#: templates/imprint.html:63
+msgid "Nutzung der Kontaktdaten"
+msgstr ""
+
+#: templates/imprint.html:64
+msgid ""
+"Der unverlangten Nutzung der in diesem Impressum veröffentlichten "
+"Kontaktdaten der Hanse- und Universitätsstadt Rostock durch Dritte, "
+"insbesondere der Zustellung unangeforderter Werbe- oder "
+"Informationsmaterialien, widerspricht die Hanse- und Universitätsstadt "
+"Rostock hiermit ausdrücklich. Sie behält sich ferner rechtliche Schritte "
+"gegen Dritte im Falle der Zustellung unangeforderter Werbe- oder "
+"Informationsmaterialien vor."
+msgstr ""
+
+#: templates/imprint.html:66
+msgid ""
+"Kommentare, Anregungen und Kritik zu dem vorliegenden Angebot der Hanse- "
+"und Universitätsstadt Rostock richten Sie bitte an:"
+msgstr ""
+
+#: templates/privacy_policy.html:7
+msgid ""
+"Nutzung des vorliegenden Angebotes der Hanse- und Universitätsstadt "
+"Rostock"
+msgstr ""
+
+#: templates/privacy_policy.html:8
+msgid ""
+"Die Nutzung des vorliegenden Angebotes der Hanse- und Universitätsstadt "
+"Rostock ist ohne Angabe personenbezogener Daten möglich."
+msgstr ""
+
+#: templates/privacy_policy.html:9
+msgid "Kontaktaufnahme mit der Hanse- und Universitätsstadt Rostock"
+msgstr ""
+
+#: templates/privacy_policy.html:10
+msgid ""
+"Bei einer Kontaktaufnahme mit der Hanse- und Universitätsstadt Rostock "
+"werden personenbezogene Daten (Name, Anschrift, Telefonnummer, E-Mail-"
+"Adresse etc.) nur intern und nur zu ihrem vorgesehenen Zweck gespeichert "
+"und verwendet. Sie unterliegen dem DSG M-V. Eine Weitergabe an Dritte "
+"erfolgt ausschließlich bei gesetzlicher oder durch Gerichtsentscheidung "
+"hervorgerufener Verpflichtung oder im Falle von Angriffen auf die "
+"Internetinfrastruktur der Hanse- und Universitätsstadt Rostock, soweit "
+"eine Rechts- oder Strafverfolgung dies erfordert. Eine Weitergabe zu "
+"kommerziellen oder anderen Zwecken erfolgt nicht."
+msgstr ""
+
+#: templates/privacy_policy.html:11
+msgid "Protokollierung"
+msgstr ""
+
+#: templates/privacy_policy.html:12
+msgid ""
+"Wenn Sie auf das vorliegende Angebot der Hanse- und Universitätsstadt "
+"Rostock zugreifen, werden keine Zugriffsdaten protokolliert."
+msgstr ""
+
+#: templates/privacy_policy.html:13
+msgid "Einsatz von Cookies"
+msgstr ""
+
+#: templates/privacy_policy.html:14
+msgid ""
+"Das vorliegende Angebot der Hanse- und Universitätsstadt Rostock "
+"verwendet keine Cookies."
+msgstr ""
+
+#: templates/privacy_policy.html:15
+msgid "Sicherheit"
+msgstr ""
+
+#: templates/privacy_policy.html:16
+msgid ""
+"Die Hanse- und Universitätsstadt Rostock setzt für das vorliegende "
+"Angebot technische und organisatorische Sicherheitsmaßnahmen ein, um "
+"gespeicherte und verwendete Daten gegen zufällige oder vorsätzliche "
+"Manipulation, Verlust, Zerstörung oder gegen den Zugriff unberechtigter "
+"Dritter zu schützen. Die Sicherheitsmaßnahmen werden entsprechend der "
+"technologischen Entwicklung fortlaufend verbessert."
+msgstr ""
+
+#: templates/terms_of_use.html:7
+msgid "Nutzung der Inhalte der Hanse- und Universitätsstadt Rostock"
 msgstr ""
 
