--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: sebastian.gutzeit@rostock.de\n"
-"POT-Creation-Date: 2017-12-05 16:04+0100\n"
+"POT-Creation-Date: 2017-12-06 16:34+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Sebastian Gutzeit <sebastian.gutzeit@rostock.de>\n"
 "Language: en\n"
@@ -19,43 +19,358 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.5.1\n"
 
-#: geolotse.py:160 templates/index.html:24
+#: geolotse.py:176
 msgid "Katalog"
 msgstr "Catalog"
 
-#: geolotse.py:168 templates/index.html:25
+#: geolotse.py:184 templates/footer.html:6
+msgid "Impressum"
+msgstr "Imprint"
+
+#: geolotse.py:192 templates/footer.html:5
+msgid "Datenschutz"
+msgstr "Privacy policy"
+
+#: geolotse.py:200
 msgid "Lebenslagen"
 msgstr "Situations"
 
-#: templates/catalog.html:20
+#: geolotse.py:208 templates/footer.html:8
+msgid "Nutzungsbedingungen"
+msgstr "Terms of use"
+
+#: templates/catalog.html:25
 msgid "API (Programmierschnittstellen)"
 msgstr "API (Application programming interfaces)"
 
-#: templates/catalog.html:22
+#: templates/catalog.html:27
 msgid "Anwendungen"
 msgstr "Applications"
 
-#: templates/catalog.html:24
+#: templates/catalog.html:29
 msgid "Dokumentationen"
 msgstr "Documentations"
 
-#: templates/catalog.html:26
+#: templates/catalog.html:31
 msgid "Downloads"
 msgstr "Downloads"
 
-#: templates/catalog.html:28
+#: templates/catalog.html:33
 msgid "externe Links"
 msgstr "External links"
 
-#: templates/catalog.html:30
+#: templates/catalog.html:35
 msgid "Geodatendienste"
 msgstr "Geo services"
 
-#: templates/catalog.html:32
+#: templates/catalog.html:37
 msgid "Tools"
 msgstr "Helpers"
 
-#: templates/catalog.html:43
+#: templates/catalog.html:50 templates/catalog.html:61
+#: templates/catalog.html:76
 msgid "letzte Prüfung auf Erreichbarkeit"
 msgstr "last availability check"
 
+#: templates/catalog.html:51 templates/catalog.html:62
+#: templates/catalog.html:77
+msgid "öffentlich zugänglich"
+msgstr "publicly available"
+
+#: templates/catalog.html:51 templates/catalog.html:62
+#: templates/catalog.html:77
+msgid "nicht öffentlich zugänglich"
+msgstr "not publicly available"
+
+#: templates/catalog.html:69
+msgid "Listeninhalte filtern"
+msgstr "Filter list"
+
+#: templates/footer.html:4
+msgid "Code"
+msgstr "Code"
+
+#: templates/footer.html:7 templates/imprint.html:65
+msgid "Kontakt"
+msgstr "Contact"
+
+#: templates/footer.html:11
+msgid "Lizenz"
+msgstr "License"
+
+#: templates/imprint.html:7
+msgid "Herausgeberin"
+msgstr "Publisher"
+
+#: templates/imprint.html:8 templates/imprint.html:24 templates/imprint.html:40
+msgid "Hanse- und Universitätsstadt Rostock"
+msgstr "Municipality of Rostock"
+
+#: templates/imprint.html:10 templates/imprint.html:26
+msgid "Büro des Oberbürgermeisters"
+msgstr "Office of the Mayor"
+
+#: templates/imprint.html:12
+msgid "Presse- und Informationsstelle"
+msgstr "Press Office"
+
+#: templates/imprint.html:16 templates/imprint.html:34
+#: templates/imprint.html:48
+msgid "Telefon"
+msgstr "telephone"
+
+#: templates/imprint.html:18 templates/imprint.html:36
+#: templates/imprint.html:50
+msgid "Telefax"
+msgstr "telefax"
+
+#: templates/imprint.html:20 templates/imprint.html:38
+#: templates/imprint.html:52
+msgid "E-Mail"
+msgstr "email"
+
+#: templates/imprint.html:21
+msgid "Umsatzsteuer-Identifikationsnummer gemäß § 27a Umsatzsteuergesetz"
+msgstr "VAT identification number"
+
+#: templates/imprint.html:23
+msgid "Verantwortung gemäß § 7 Abs. 1 Telemediengesetz"
+msgstr "Responsibility"
+
+#: templates/imprint.html:30
+msgid "Pressesprecher Presse- und Informationsstelle"
+msgstr "Press Officer"
+
+#: templates/imprint.html:39
+msgid "Konzept, Betreuung und technische Realisierung"
+msgstr "Concept and technical support"
+
+#: templates/imprint.html:42
+msgid "Kataster-, Vermessungs- und Liegenschaftsamt"
+msgstr "Land Registry Office"
+
+#: templates/imprint.html:53
+msgid "Haftung für angebotene Inhalte"
+msgstr "Offered data and content"
+
+#: templates/imprint.html:54
+msgid ""
+"Trotz sorgfältigen Recherchen und Prüfungen übernimmt die Hanse- und "
+"Universitätsstadt Rostock für die Richtigkeit, Vollständigkeit und "
+"Aktualität der von ihr angebotenen Inhalte keine Gewähr und keine "
+"Haftung. Insbesondere haftet die Hanse- und Universitätsstadt Rostock "
+"nicht für Schäden, die durch die direkte oder indirekte Nutzung oder "
+"Nichtnutzung der angebotenen Inhalte verursacht werden. Die Hanse- und "
+"Universitätsstadt Rostock behält es sich ferner ausdrücklich vor, "
+"einzelne Inhalte oder das gesamte Angebot ohne gesonderte Ankündigung zu "
+"verändern, zu ergänzen, zu löschen oder die Veröffentlichung zeitweise "
+"oder endgültig einzustellen. Die Hanse- und Universitätsstadt Rostock ist"
+" als Diensteanbieterin gemäß § 7 Abs. 1 Telemediengesetz (TMG) für ihre "
+"eigenen Inhalte, die sie zur Nutzung bereithält, verantwortlich. Gemäß §§"
+" 8 bis 10 TMG ist sie jedoch nicht verpflichtet, von fremden Eigentümern "
+"übermittelte oder gespeicherte Inhalte, die sie zur Nutzung bereithält, "
+"auf etwaige Rechtsverletzungen zu überprüfen. Gleichwohl verpflichtet sie"
+" sich zur umgehenden Entfernung betroffener Inhalte ab dem Zeitpunkt der "
+"Kenntnis einer konkreten Rechtsverletzung."
+msgstr ""
+"The municipality of Rostock takes no liability for the correctness, "
+"integrity or actuality for the data and content offered via this web "
+"application. Most notably, the municipality of Rostock takes no liability"
+" for any damages arising from using or not using use either this web "
+"application or any of its data or content. Furthermore, the municipality "
+"of Rostock reserves the right to change, delete or unpublish either this "
+"web application or its data or content without any special announcement."
+
+#: templates/imprint.html:55
+msgid "Haftung für externe Links"
+msgstr "Third party links"
+
+#: templates/imprint.html:56
+msgid ""
+"Für die von Dritten angebotenen fremden Inhalte, auf die mittels externer"
+" Links verwiesen ist, übernimmt die Hanse- und Universitätsstadt Rostock "
+"keine Gewähr und keine Haftung, da sich diese Inhalte ihrer Einflussnahme"
+" entziehen. Verantwortlich für diese Inhalte ist stets der jeweilige "
+"Anbieter. Alle mittels externer Links verknüpfte fremde Inhalte wurden "
+"zum Zeitpunkt ihrer Verlinkung auf mögliche Rechtsverletzungen überprüft,"
+" mit dem Resultat, dass keine konkreten Rechtsverletzungen erkannt "
+"wurden. Die kontinuierliche Kontrolle der verlinkten Inhalte allerdings "
+"ist ohne Anhaltspunkte für eine konkrete Rechtsverletzung nicht zumutbar."
+" Sollte die Hanse- und Universitätsstadt Rostock hingegen von einer "
+"konkreten Rechtsverletzung Kenntnis erlangen, wird sie die entsprechenden"
+" externen Links umgehend entfernen."
+msgstr ""
+"The municipality of Rostock takes no responsibility or liability for the "
+"content and activities of linked third party sites. Responsible for those"
+" sites is their respective owner. Nonetheless, the municipality of "
+"Rostock seeks to protect the integrity of this web application and "
+"welcomes any feedback about linked third party sites."
+
+#: templates/imprint.html:57
+msgid "Urheberrecht"
+msgstr "Copyright"
+
+#: templates/imprint.html:58 templates/terms_of_use.html:8
+msgid ""
+"Die von der Hanse- und Universitätsstadt Rostock angebotenen und in ihrem"
+" Eigentum befindlichen Inhalte unterliegen der gemeinfreien Lizenz"
+msgstr ""
+"The content owned by the municipality of Rostock and offered via this web"
+" application are made available under the"
+
+#: templates/imprint.html:58 templates/terms_of_use.html:8
+msgid ""
+"(CC0 1.0). Damit ist alles gestattet, ohne um weitere Erlaubnis bitten zu"
+" müssen."
+msgstr ""
+"(CC0 1.0). This means that you can do what ever you want with the data "
+"without having to ask for further permission."
+
+#: templates/imprint.html:59
+msgid "Verweise auf angebotene Inhalte"
+msgstr "Links to this web application"
+
+#: templates/imprint.html:60
+msgid ""
+"Verweise auf die angebotenen Inhalte durch externe Angebote Dritter sind "
+"ausdrücklich erwünscht. Hingegen sind Verweise durch Angebote natürlicher"
+" oder juristischer Personen, die verfassungsfeindliche Ziele verfolgen, "
+"die eine sittenwidrige Tätigkeit ausüben oder die die Vermarktung von "
+"Artikeln mit sittenwidrigem Inhalt betreiben, nicht zulässig."
+msgstr "Links to this web application by third parties are explicitly welcome."
+
+#: templates/imprint.html:61
+msgid "Barrierefreiheit"
+msgstr "Accessibility"
+
+#: templates/imprint.html:62
+msgid ""
+"Die Hanse- und Universitätsstadt Rostock verpflichtet sich in ihren "
+"Leitlinien zur Stadtentwicklung die zum 26. März 2009 in Deutschland in "
+"Kraft getretene Behindertenrechtskonvention der Vereinten Nationen "
+"schrittweise umzusetzen. In ihren Internetauftritten achtet die Hanse- "
+"und Universitätsstadt Rostock daher auf die Einhaltung der Barrierefreien"
+" Informationstechnik-Verordnung (BITV 2.0). Bei der Erstellung des "
+"vorliegenden Angebotes konnten die Vorgaben der BITV 2.0 hingegen nicht "
+"vollständig umgesetzt werden, da die Grenzen der Barrierefreiheit unter "
+"anderem in der Bedienung interaktiver digitaler Karten liegen. "
+"Vollständig umgesetzt werden konnten jedoch die Richtlinien der Web "
+"Content Accessibility Guidelines 2.0 (WCAG 2.0) in der Stufe AA des World"
+" Wide Web Consortiums (W3C)."
+msgstr ""
+"The municipality of Rostock aims to keep its web applications accessible "
+"for everyone."
+
+#: templates/imprint.html:63
+msgid "Nutzung der Kontaktdaten"
+msgstr "Using the contact information"
+
+#: templates/imprint.html:64
+msgid ""
+"Der unverlangten Nutzung der in diesem Impressum veröffentlichten "
+"Kontaktdaten der Hanse- und Universitätsstadt Rostock durch Dritte, "
+"insbesondere der Zustellung unangeforderter Werbe- oder "
+"Informationsmaterialien, widerspricht die Hanse- und Universitätsstadt "
+"Rostock hiermit ausdrücklich. Sie behält sich ferner rechtliche Schritte "
+"gegen Dritte im Falle der Zustellung unangeforderter Werbe- oder "
+"Informationsmaterialien vor."
+msgstr ""
+"The municipality of Rostock prohibits the unsolicited usage of its "
+"contact information published here."
+
+#: templates/imprint.html:66
+msgid ""
+"Kommentare, Anregungen und Kritik zu dem vorliegenden Angebot der Hanse- "
+"und Universitätsstadt Rostock richten Sie bitte an:"
+msgstr "Please feel free to address your questions, wishes or suggestions to:"
+
+#: templates/privacy_policy.html:7
+msgid ""
+"Nutzung des vorliegenden Angebotes der Hanse- und Universitätsstadt "
+"Rostock"
+msgstr "Using this web application"
+
+#: templates/privacy_policy.html:8
+msgid ""
+"Die Nutzung des vorliegenden Angebotes der Hanse- und Universitätsstadt "
+"Rostock ist ohne Angabe personenbezogener Daten möglich."
+msgstr ""
+"You can use this web application offered by the municipality of Rostock "
+"completely without having to provide any personally-identifying "
+"information."
+
+#: templates/privacy_policy.html:9
+msgid "Kontaktaufnahme mit der Hanse- und Universitätsstadt Rostock"
+msgstr "Establishing contacts with the municipality of Rostock"
+
+#: templates/privacy_policy.html:10
+msgid ""
+"Bei einer Kontaktaufnahme mit der Hanse- und Universitätsstadt Rostock "
+"werden personenbezogene Daten (Name, Anschrift, Telefonnummer, E-Mail-"
+"Adresse etc.) nur intern und nur zu ihrem vorgesehenen Zweck gespeichert "
+"und verwendet. Sie unterliegen dem DSG M-V. Eine Weitergabe an Dritte "
+"erfolgt ausschließlich bei gesetzlicher oder durch Gerichtsentscheidung "
+"hervorgerufener Verpflichtung oder im Falle von Angriffen auf die "
+"Internetinfrastruktur der Hanse- und Universitätsstadt Rostock, soweit "
+"eine Rechts- oder Strafverfolgung dies erfordert. Eine Weitergabe zu "
+"kommerziellen oder anderen Zwecken erfolgt nicht."
+msgstr ""
+"If you establish contacts with the municipality of Rostock, your "
+"personally-identifying information (i.e. name, address, telephone number,"
+" email address, etc.) are stored internally and used for its designated "
+"purpose only. In any case, your personally-identifying information is "
+"protected by the Data Protection Act of Mecklenburg-Western Pomerania. "
+"The information will be circulated to third parties only on legal "
+"obligation or on obligation caused by judicial decisions or in case of "
+"attacks on the internet infrastructure of the municipality of Rostock, as"
+" far as necessitated by prosecution. Your personally-identifying "
+"information will never be transferred to unaffiliated third parties for "
+"commercial or other purposes."
+
+#: templates/privacy_policy.html:11
+msgid "Protokollierung"
+msgstr "Logging"
+
+#: templates/privacy_policy.html:12
+msgid ""
+"Wenn Sie auf das vorliegende Angebot der Hanse- und Universitätsstadt "
+"Rostock zugreifen, werden keine Zugriffsdaten protokolliert."
+msgstr ""
+"When you access this web application offered by the municipality of "
+"Rostock, no data is logged."
+
+#: templates/privacy_policy.html:13
+msgid "Einsatz von Cookies"
+msgstr "Use of cookies"
+
+#: templates/privacy_policy.html:14
+msgid ""
+"Das vorliegende Angebot der Hanse- und Universitätsstadt Rostock "
+"verwendet keine Cookies."
+msgstr ""
+"This web application offered by the municipality of Rostock does not make"
+" use of cookies."
+
+#: templates/privacy_policy.html:15
+msgid "Sicherheit"
+msgstr "Security"
+
+#: templates/privacy_policy.html:16
+msgid ""
+"Die Hanse- und Universitätsstadt Rostock setzt für das vorliegende "
+"Angebot technische und organisatorische Sicherheitsmaßnahmen ein, um "
+"gespeicherte und verwendete Daten gegen zufällige oder vorsätzliche "
+"Manipulation, Verlust, Zerstörung oder gegen den Zugriff unberechtigter "
+"Dritter zu schützen. Die Sicherheitsmaßnahmen werden entsprechend der "
+"technologischen Entwicklung fortlaufend verbessert."
+msgstr ""
+"The municipality of Rostock applies technical as well as organisational "
+"precautions to this web application in order to protect stored and used "
+"information against unintentional or intentional manipulation, loss or "
+"deletion and against access of unaffiliated third parties. The "
+"precautions are being improved continuously according to technological "
+"progress."
+
+#: templates/terms_of_use.html:7
+msgid "Nutzung der Inhalte der Hanse- und Universitätsstadt Rostock"
+msgstr "Using the content of the municipality of Rostock"
