--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -300,7 +300,7 @@ msgstr "Municipality of Rostock"
 
 #: templates/imprint.html:31 templates/imprint.html:43
 #: templates/privacy_policy.html:39
-msgid "Büro des Oberbürgermeisters"
+msgid "Büro der Oberbürgermeisterin"
 msgstr "Office of the Mayor"
 
 #: templates/imprint.html:32
